# bronze

./: Cargo.toml  README.md  build.rs
assets/: Cursor.cur
bronze/: Cargo.toml  README.md
bronze/include/: README.md
bronze/src/: cursor.rs  debugger.rs  engine.rs  entity.rs  game.rs  graphics.rs  icon.rs  input.rs  lib.rs  resources.rs  scene.rs  shape.rs  sprite.rs  timer.rs  window.rs
bronze_macros/: Cargo.toml
bronze_macros/src/: lib.rs
examples/breakout/: Cargo.toml
examples/breakout/src/: ball.rs  block.rs  debugger.rs  main.rs  player.rs  resources.rs
examples/pacman/: Cargo.toml
examples/pacman/assets/levels/: level1_foods.txt  level1_pivots.txt  level1_specials.txt  level2_pivots.txt
examples/pacman/src/: entities.rs  game.rs  main.rs  resources.rs
game/: Cargo.toml
game/src/: ball.rs  block.rs  debugger.rs  main.rs  player.rs  resources.rs
resources/: resources.rc
src/: main.rs
src/engine/: context.rs  debugger.rs  engine.rs  game.rs  graphics.rs  icon.rs  input.rs  mod.rs  resources.rs  timer.rs  window.rs
