[package]
name = "bronze_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bronze = { path = "../bronze" }
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }
